--- a/README
+++ b/README
@@ -1,8 +1,7 @@
-======
-muslpi
+Muslpi
 ======
 
-muslpi is a cross lfs build system for raspberry pi (but can/will possibly be
+Muslpi is a cross lfs build system for raspberry pi (but can/will possibly be
 extended to a generic cross lfs build system).
 
 The resulting clfs will use the lightweight and posix-conformant musl libc, and
@@ -12,9 +11,8 @@ This build system will first build a cross toolchain (toolchain/host packages)
 and then build cross compiled core packages.
 
 
-== Instruction ==
-
-= First step =
+First (optional) step
+---------------------
 First to simplify use of this build system, it is recommended to add tools
 directory to your PATH in order to run build scripts directly :
 
@@ -27,7 +25,8 @@ not you have to prefix calls to build.sh, install.sh and uninstall.sh with
 path to tools directory
 
 
-= Build a package =
+Build a package
+---------------
 In order to build a package, go to the package directory and run build.sh,
 this will build a tar.gz-based package
 
@@ -35,16 +34,19 @@ As footprints have not been well tested on different environment you can use
 "build.sh -f" to not check package footprint.
 
 
-= Install a package =
+Install a package
+-----------------
 Run install.sh <pkg.tar.gz>
 
 
-= Uninstall a package =
+Uninstall a package
+-------------------
 To uninstall a cross package use "uninstall.sh pkg" and to uninstall a host
 package use "uninstall.sh pkg host"
 
 
-= Auto build =
+Auto build
+----------
 Lazy people can use install_pkglist.sh to automatically build a package list.
 You can find three usefull package lists in config/pkg_lists directory. For
 example to make a complete install run these two commands :
@@ -58,20 +60,26 @@ And go take a beer and 6 others because this will take a long long time.
 You can use "install_pkglist.sh -f" if you want to bypass package footprint
 checking.
 
-= Stripping =
+
+Stripping
+---------
 If you want to strip your clfs use strip.sh when clfs has been fully built
 
 
-= configure =
+Configure
+---------
 You can play with some build options by modifying files in config/
 
 
-= Result =
+Result
+------
 Toolchain and clfs result will be placed in build directory. When done you can
 cp the clfs dir inside a well formatted disk and boot up your raspberry pi.
 If you get lucky this possibly can boot sometimes.
 
-= Send to target =
+
+Send to target
+--------------
 As an alternative you can use the send2target script to send one package or a
 package list to a target (ie a mounted disk). For example the following can be
 used just after the clfs has been built in order to copy the result system in a
